--- a/_posts/2014-06-17-markdown.md
+++ b/_posts/2014-06-17-markdown.md
@@ -7,11 +7,13 @@ tags: [markdown, git]
 ---
 
 1. 粗体
-\*\*\*word\*\*\*
-例子:**username**
+\*\*\*word\*\*\*  
+例子:  
+**username**  
+
 
 2. 代码 
-\`\`\`code\`\`\`  
+\```code\```  
 例子：  
 ```
 for (i = 0; i < 10; i++)
@@ -22,4 +24,5 @@ for (i = 0; i < 10; i++)
 例子:  
 上一行  
 下一行  
+同一行
 >END
