--- a/_posts/2014-06-17-markdown.md
+++ b/_posts/2014-06-17-markdown.md
@@ -13,12 +13,15 @@ tags: [markdown, git]
 
 
 2. 代码 
-\```code\```  
+\`\`\`  
+code  
+\```  
 例子：  
 ```
 for (i = 0; i < 10; i++)
 	printf ("%d\n", i);
 ```
+
 3. 换行
 空格 空格 回车
 例子:  
