--- a/_posts/2014-06-17-markdown.md
+++ b/_posts/2014-06-17-markdown.md
@@ -6,13 +6,13 @@ categories: web
 tags: [markdown, git]
 ---
 
-1. 粗体
+1. 粗体  
 \*\*\*word\*\*\*  
 例子:  
 **username**  
 
 
-2. 代码 
+2. 代码  
 \`\`\`  
 code  
 \```  
@@ -20,14 +20,30 @@ code
 ```
 for (i = 0; i < 10; i++)
 	printf ("%d\n", i);
-```
+```  
 
-3. 换行
-空格 空格 回车
+3. 换行  
+空格 空格 回车  
 例子:  
 上一行  
 下一行
-同一行
+同一行  
 
-4. xxx
+4. 强调  
+\`word\`  
+例子：  
+`word`  
+
+5. 项目符号  
+\* red  
+\* blue
+\* yellow
+例子：  
+* red  
+  xxx  
+* blue  
+  yyy  
+* yellow  
+  zzz  
+
 >END
