--- a/_posts/2014-06-17-markdown.md
+++ b/_posts/2014-06-17-markdown.md
@@ -34,16 +34,40 @@ for (i = 0; i < 10; i++)
 例子：  
 `word`  
 
-5.项目符号  
+5.项目符号列表(注意符号和文字之间的空格)   
 \* red  
 \* blue  
-\* yellow
+\* yellow  
+
 例子：  
 * red  
   xxx  
 * blue  
   yyy  
-* yellow  
+* yellow    
   zzz  
+
+6.编号列表(注意点号和文字之间的空格)  
+1\. red  
+2\. blue  
+3\. yellow  
+例子：  
+1. red  
+2. blue  
+3. yellow  
+
+7.链接  
+\[github\]:(http://github.com)  
+例子：  
+[github]:(http://github.com) 
+
+8.标题  
+\#\#二级标题  
+例子：  
+##二级标题  
+
+9.Task Lists (GFW only)
+[]   to do  
+[x]  has did  
 
 >END
