--- a/_posts/2014-06-17-markdown.md
+++ b/_posts/2014-06-17-markdown.md
@@ -5,6 +5,7 @@ date:   2014-06-17 15:25:02
 categories: web 
 tags: [markdown, git]
 ---
+**本文仅使用于github GFW markdown，与标准markdown语法有区别**
 
 1.粗体  
 \*\*\*word\*\*\*  
@@ -17,7 +18,7 @@ tags: [markdown, git]
 code  
 \```  
 例子：  
-```
+```c
 for (i = 0; i < 10; i++)
 	printf ("%d\n", i);
 ```  
@@ -57,17 +58,14 @@ for (i = 0; i < 10; i++)
 3. yellow  
 
 7.链接  
-\[github\]:(http://github.com)  
+\[github\]:http://github.com  
 例子：  
-[github]:(http://github.com) 
+[github]:http://github.com 
 
 8.标题  
 \#\#二级标题  
 例子：  
 ##二级标题  
 
-9.Task Lists (GFW only)
-[]   to do  
-[x]  has did  
 
 >END
