--- a/_posts/2014-06-17-markdown.md
+++ b/_posts/2014-06-17-markdown.md
@@ -54,13 +54,14 @@ for (i = 0; i < 10; i++)
 3\. yellow  
 例子：  
 1. red  
+  xxx  
 2. blue  
+  yyy  
 3. yellow  
+  zzz  
 
 7.链接  
-\[github\]:http://github.com  
-例子：  
-[github]:http://github.com 
+http://github.com  
 
 8.标题  
 \#\#二级标题  
