--- a/_posts/2014-06-17-markdown.md
+++ b/_posts/2014-06-17-markdown.md
@@ -22,3 +22,52 @@ code
 for (i = 0; i < 10; i++)
 	printf ("%d\n", i);
 ```  
+
+3.换行  
+空格 空格 回车  
+例子:  
+上一行  
+下一行
+同一行  
+
+4.强调  
+\`word\`  
+例子：  
+`word`  
+
+5.项目符号列表(注意符号和文字之间的空格)   
+\* red  
+\* blue  
+\* yellow  
+
+例子：  
+* red  
+  xxx  
+* blue  
+  yyy  
+* yellow    
+  zzz  
+
+6.编号列表(注意点号和文字之间的空格)  
+1\. red  
+2\. blue  
+3\. yellow  
+例子：  
+1. red
+  xxx
+2. blue
+  yyy
+3. yellow
+  zzz  
+
+7.链接  
+http://github.com  
+[link](http://github.com)  
+
+8.标题  
+\#\# 二级标题  
+例子：  
+## 二级标题  
+
+
+>END
