--- a/_posts/2014-06-17-markdown.md
+++ b/_posts/2014-06-17-markdown.md
@@ -16,7 +16,7 @@ tags: [markdown, git]
 2.代码  
 \`\`\`  
 code  
-\```  
+\`\`\`  
 例子：  
 ```c
 for (i = 0; i < 10; i++)
@@ -53,11 +53,11 @@ for (i = 0; i < 10; i++)
 2\. blue  
 3\. yellow  
 例子：  
-1. red
-  xxx
-2. blue
-  yyy
-3. yellow
+1. red  
+  xxx  
+2. blue  
+  yyy  
+3. yellow  
   zzz  
 
 7.链接  
@@ -69,5 +69,6 @@ http://github.com
 例子：  
 ## 二级标题  
 
+## 标题测试
 
 >END
