--- a/_posts/2014-06-17-markdown.md
+++ b/_posts/2014-06-17-markdown.md
@@ -5,7 +5,9 @@ date:   2014-06-17 15:25:02
 categories: web 
 tags: [markdown, git]
 ---
-**本文仅使用于github GFW markdown，与标准markdown语法有区别**
+**本文仅使用于github GFW markdown，与标准markdown语法有区别**  
+本博客采用`Jeklly`, `markdown`解释器采用`kramdown`，与`github GFW`有区别  
+
 
 1.粗体  
 \*\*\*word\*\*\*  
@@ -18,9 +20,9 @@ tags: [markdown, git]
 code  
 \`\`\`  
 例子：  
-```c
-for (i = 0; i < 10; i++)
-	printf ("%d\n", i);
+```c  
+for (i = 0; i < 10; i++)  
+	printf ("%d\n", i);  
 ```  
 
 3.换行  
@@ -67,8 +69,7 @@ http://github.com
 8.标题  
 \#\# 二级标题  
 例子：  
-## 二级标题  
 
-## 标题测试
+## 二级标题测试
 
 >END
