--- a/_posts/2014-06-17-markdown.md
+++ b/_posts/2014-06-17-markdown.md
@@ -5,8 +5,9 @@ date:   2014-06-17 15:25:02
 categories: web 
 tags: [markdown, git]
 ---
-**本文仅使用于github GFW markdown，与标准markdown语法有区别**  
-本博客采用`Jeklly`, `markdown`解释器采用`kramdown`，与`github GFW`有区别  
+**本文仅使用于kramdown，与标准markdown语法有区别**  
+本博客采用`Jeklly`, `markdown`解释器采用`kramdown`，与`github GFW`有区别 
+[kramdown syntax](http://kramdown.gettalong.org/syntax.html)
 
 
 1.粗体  
@@ -15,10 +16,11 @@ tags: [markdown, git]
 **username**  
 
 
-2.代码  
-\`\`\`  
+2.代码块(代码块是一个单独段落，需要在在代码块前增加段落分隔符"空白行")  
+
+\~\~\~  
 code  
-\`\`\`  
+\~\~\~  
 例子：  
 
 ~~~~~~
