--- a/_posts/2014-06-17-markdown.md
+++ b/_posts/2014-06-17-markdown.md
@@ -6,8 +6,9 @@ categories: web
 tags: [markdown, git]
 ---
 **本文仅使用于kramdown，与标准markdown语法有区别**  
-本博客采用`Jeklly`, `markdown`解释器采用`kramdown`，与`github GFW`有区别 
-[kramdown syntax](http://kramdown.gettalong.org/syntax.html)
+本博客采用`Jeklly`, `markdown`解释器采用`kramdown`，与`github GFW`有区别  
+
+参考资料：[kramdown syntax](http://kramdown.gettalong.org/syntax.html)
 
 
 1.粗体  
