--- a/_posts/2014-06-17-markdown.md
+++ b/_posts/2014-06-17-markdown.md
@@ -82,4 +82,14 @@ end
 ~~~
 {: .language-ruby}
 
+{% highlight c %}
+/* hello world demo */
+#include <stdio.h>
+int main(int argc, char **argv)
+{
+	    printf("Hello, World!\n");
+		    return 0;
+}
+{% endhighlight %}
+
 >END
