--- a/_posts/2014-06-17-markdown.md
+++ b/_posts/2014-06-17-markdown.md
@@ -92,4 +92,14 @@ int main(int argc, char **argv)
 }
 {% endhighlight %}
 
+```c
+/* hello world demo */
+#include <stdio.h>
+int main(int argc, char **argv)
+{
+	    printf("Hello, World!\n");
+		    return 0;
+}
+```
+
 >END
