--- a/_posts/2014-06-17-markdown.md
+++ b/_posts/2014-06-17-markdown.md
@@ -9,6 +9,8 @@ tags: [markdown, git]
 本博客采用`Jeklly`, `markdown`解释器采用`kramdown`，与`github GFW`有区别  
 参考资料：[kramdown syntax](http://kramdown.gettalong.org/syntax.html)
 
+<link rel="stylesheet" href="../pygments.css">
+
 
 1.粗体  
 \*\*\*word\*\*\*  
