--- a/_posts/2014-06-17-markdown.md
+++ b/_posts/2014-06-17-markdown.md
@@ -96,6 +96,10 @@ int main(int argc, char **argv)
 
 ```c
 /* hello world demo */
+//single line comment
+/*multi-line 
+  comment
+ */
 #include <stdio.h>
 int main(int argc, char **argv)
 {
